kubernetes/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gateway-api
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: skills
        tier: backend
    spec:
      containers:
      - name: graphql-api
        image: localhost:5000/skills/api
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 3000
