kubernetes/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: gateway-api
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      name: express-node
  selector:
    app: skills
    tier: backend
