kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: skills
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /graphiql
        backend:
          serviceName: skills-api
          servicePort: http
      - path: /graphql
        backend:
          serviceName: skills-api
          servicePort: http
      - path: /ci
        backend:
          serviceName: concourse-web
          servicePort: 8080
      - path: /
        backend:
          serviceName: skills-web
          servicePort: http
